--- a/Rendering_elements/index.html
+++ b/Rendering_elements/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Parcel</title>
     <script src="script.js" type="module"></script>
+    <!-- <link rel="stylesheet" href="style.css"> -->
   </head>
   <body>
     <div id="root"></div>
+
   </body>
 </html>
